# or_velma

./: CMakeLists.txt  README.md  package.xml
src/: CollisionCheckerPlugin.cpp  VelmaQ5Q6CollisionChecker.cpp  VelmaQ5Q6CollisionChecker.h
