
<package>
  <name>or_velma</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE collision checker plugin for Velma robot.
  </description>
  <author>Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <license>GPL v2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>openrave</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <openrave plugins="${prefix}/lib"/>
  </export>
</package>




